# shackleton

./: .gitignore  PERF.md  README.md  bench.py  plans.md  pyproject.toml
.github/workflows/: twine_release.yml
coverage/: report.md
docs/: api.md  release_notes.md
shackleton/: __init__.py  core.py
shackleton/tests/: test_core.py  test_init.py
