[project]
name = "shackleton"
description = "Polars-based persistent tabular store backed by Parquet or Arrow IPC files"
dynamic = ["version"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["polars"]

[project.urls]
Homepage = "https://github.com/endremborza/shackleton"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "shackleton/__init__.py"

[tool.pytest.ini_options]
testpaths = ["shackleton/tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
